<resources>
    <string name="app_name">Share Hub</string>
    <string name="action_settings">Settings</string>
    <string name="hint_card_name">Name</string>
    <string name="hint_card_surname">Surname</string>
    <string name="hint_card_father">Father</string>
    <string name="hint_card_number">Number</string>
    <string name="hint_card_cvv">CVV</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Card not saved because it is empty.</string>
    <string name="add_card">Add card</string>
    <string name="del_all">Del Card</string>
</resources>