<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/surname_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_card_surname"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textColor="@color/colorItem"
        android:textColorHint="@color/colorHint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_card_name"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textColor="@color/colorItem"
        android:textColorHint="@color/colorHint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/father_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_card_father"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textColor="@color/colorItem"
        android:textColorHint="@color/colorHint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/number_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_card_number"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textColor="@color/colorItem"
        android:textColorHint="@color/colorHint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/cvv_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_card_cvv"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textColor="@color/colorItem"
        android:textColorHint="@color/colorHint"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

</LinearLayout>